# funris

./: .hgignore  .hgtags  CMakeLists.txt  TODO.txt  diff  index.html  revision.h.in.cmake
cmake/: genrev.cmake  showoptions.cmake
sql/_import_from_tdb/: copy_creatures_from_tdb.sql  copy_gameobjects_from_tdb.sql  renew_creature_guids_in_tdb.sql  renew_gameobject_guids_in_tdb.sql
sql/cleanup/: del_chars_lvl_below_x.sql  del_chars_lvl_below_x_older_than_x.sql
sql/izbooshka_updates/: 11611_character_stats.sql  11613_character_stats.sql  11628_character_stats.sql  11803_warden_realmd.sql  11947_achievement_criteria_data.sql
sql/izbooshka_updates/old/: 19245_world_mail_level_reward.sql  19248_auth_premium_accounts.sql  19263_world_script_names.sql  19267_world_script_names.sql  19354_chars_itemlog.sql  19372_world_updates.sql
sql/updates/Asgarot/: structure_vendor.txt  world.sql  world_vendor.sql
sql_sh/: absorbproc.sql  world.sql
sql_sh/auth/: 01_2013_31_01_realmlist.sql
sql_sh/customs/: challenge_faststart.sql  db_cleanup.sql  fake_items.sql  world_transmogrifycation.sql
sql_sh/world/: 01_2013_31_01_world_disables.sql
src/server/: CMakeLists.txt
src/server/pathfinding/: CMakeLists.txt  DetourAssert.h  DetourCommon.h  DetourNavMesh.cpp  DetourNavMesh.h  DetourNavMeshBuilder.cpp  DetourNavMeshBuilder.h  DetourNavMeshQuery.cpp  DetourNavMeshQuery.h  DetourNode.cpp  DetourNode.h  DetourObstacleAvoidance.cpp  DetourObstacleAvoidance.h
src/server/pathfinding/PrecompiledHeaders/: pathfindingPCH.cpp
tools/Warden/: Wardend.rar  modules.rar  wardend.conf.dist
(+243 files in other folders)
